// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KeyLocalizationForm > handles changes 1`] = `
[MockFunction spy] {
  "calls": [
    [
      "eng",
      [
        {
          "translations": {
            "body": "translated body",
            "subject": "translated subject",
          },
          "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`KeyLocalizationForm > removes translations 1`] = `
<body>
  <div>
    <div
      class="_dialog_af1b5d"
    >
      <div
        class="_header_af1b5d"
      >
        <div
          class="_title_container_af1b5d"
        >
          <div
            class="_title_af1b5d u font secondary title-sm black"
          >
            Send email
          </div>
          <div
            class="_subtitle_af1b5d"
          />
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <div
            class="tab size-sm _tabs_af1b5d"
            data-v-54432ea7=""
          >
            <header
              class="tab-header"
              data-v-54432ea7=""
            >
              <ul
                class="tab-content"
                data-v-54432ea7=""
              >
                
                <li
                  class="tab-head tab-head--active"
                  data-v-54432ea7=""
                >
                  
                  <div
                    __use_react_component_wrap=""
                    style="all: unset;"
                  >
                    General
                  </div>
                  
                </li>
                <li
                  class="tab-head"
                  data-v-54432ea7=""
                >
                  
                  <div
                    __use_react_component_wrap=""
                    style="all: unset;"
                  >
                    Body Translation
                  </div>
                  
                </li>
                
              </ul>
            </header>
            <main
              class="tab-body"
              data-v-54432ea7=""
            >
              <div
                class="tab-panel"
                data-v-54432ea7=""
              >
                
                
              </div>
            </main>
          </div>
        </div>
      </div>
      <div
        class="_content_af1b5d"
      >
        <div>
          <div
            data-spec="translation-container"
          >
            <div
              class="_translate_from_604508"
              data-spec="text-to-translate"
            >
              New Sign Up
            </div>
          </div>
          <div>
            <div
              class="_completion_wrapper_17662c"
            >
              <div
                data-use-vue-component-wrap=""
                data-v-app=""
                style="all: unset;"
              >
                <div
                  class="unnnic-text-area sm normal _textarea_17662c"
                  data-testid="Subject"
                  data-v-e1948bc4=""
                >
                  <!---->
                  <textarea
                    data-v-e1948bc4=""
                    placeholder="Spanish Translation"
                  />
                  <!---->
                  <!---->
                </div>
              </div>
              <div
                class="_options_wrapper_08dd12"
                data-testid="temba_completion_options_Subject"
                id=""
                style="margin-top: 1px; width: -24px; display: none;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="_footer_af1b5d"
      >
        <div
          class="_buttons_af1b5d"
        >
          <div
            class="_buttons_wrapper_af1b5d"
          >
            <div
              class="_right_buttons_af1b5d"
            >
              <div
                data-use-vue-component-wrap=""
                data-v-app=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--tertiary"
                  data-v-d3a33348=""
                  style="margin-left: 0px; margin-top: 0px; margin-right: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-d3a33348=""
                  >
                    
                    
                     Cancel
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
                data-v-app=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--primary"
                  data-v-d3a33348=""
                  style="margin-top: 0px; margin-right: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-d3a33348=""
                  >
                    
                    
                     Ok
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`KeyLocalizationForm > removes translations 2`] = `
[MockFunction spy] {
  "calls": [
    [
      "spa",
      [
        {
          "translations": {},
          "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`KeyLocalizationForm > renders send email 1`] = `
<body>
  <div>
    <div
      class="_dialog_af1b5d"
    >
      <div
        class="_header_af1b5d"
      >
        <div
          class="_title_container_af1b5d"
        >
          <div
            class="_title_af1b5d u font secondary title-sm black"
          >
            Send email
          </div>
          <div
            class="_subtitle_af1b5d"
          />
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <div
            class="tab size-sm _tabs_af1b5d"
            data-v-54432ea7=""
          >
            <header
              class="tab-header"
              data-v-54432ea7=""
            >
              <ul
                class="tab-content"
                data-v-54432ea7=""
              >
                
                <li
                  class="tab-head tab-head--active"
                  data-v-54432ea7=""
                >
                  
                  <div
                    __use_react_component_wrap=""
                    style="all: unset;"
                  >
                    General
                  </div>
                  
                </li>
                <li
                  class="tab-head"
                  data-v-54432ea7=""
                >
                  
                  <div
                    __use_react_component_wrap=""
                    style="all: unset;"
                  >
                    Body Translation
                  </div>
                  
                </li>
                
              </ul>
            </header>
            <main
              class="tab-body"
              data-v-54432ea7=""
            >
              <div
                class="tab-panel"
                data-v-54432ea7=""
              >
                
                
              </div>
            </main>
          </div>
        </div>
      </div>
      <div
        class="_content_af1b5d"
      >
        <div>
          <div
            data-spec="translation-container"
          >
            <div
              class="_translate_from_604508"
              data-spec="text-to-translate"
            >
              New Sign Up
            </div>
          </div>
          <div>
            <div
              class="_completion_wrapper_17662c"
            >
              <div
                data-use-vue-component-wrap=""
                data-v-app=""
                style="all: unset;"
              >
                <div
                  class="unnnic-text-area sm normal _textarea_17662c"
                  data-testid="Subject"
                  data-v-e1948bc4=""
                >
                  <!---->
                  <textarea
                    data-v-e1948bc4=""
                    placeholder="English Translation"
                  />
                  <!---->
                  <!---->
                </div>
              </div>
              <div
                class="_options_wrapper_08dd12"
                data-testid="temba_completion_options_Subject"
                id=""
                style="margin-top: 1px; width: -24px; display: none;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="_footer_af1b5d"
      >
        <div
          class="_buttons_af1b5d"
        >
          <div
            class="_buttons_wrapper_af1b5d"
          >
            <div
              class="_right_buttons_af1b5d"
            >
              <div
                data-use-vue-component-wrap=""
                data-v-app=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--tertiary"
                  data-v-d3a33348=""
                  style="margin-left: 0px; margin-top: 0px; margin-right: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-d3a33348=""
                  >
                    
                    
                     Cancel
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
                data-v-app=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--primary"
                  data-v-d3a33348=""
                  style="margin-top: 0px; margin-right: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-d3a33348=""
                  >
                    
                    
                     Ok
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
